Map dispays generic World Map on empty input at Add Event